test a predict file

--- a/notebooks/05a_predict.ipynb
+++ b/notebooks/05a_predict.ipynb
@@ -2,6 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "DF_PATH       = \"../data/processed/1_preprocessed_df.pkl\"\n",
+    "FEATURES_PATH = \"../data/processed/features_skills_clusters_counts.pkl\"\n",
+    "\n",
+    "ROLE_COLS      = ['DevType']\n",
+    "TECH_COLS      = ['LanguageWorkedWith',    'DatabaseWorkedWith',    'WebframeWorkedWith',    'MiscTechWorkedWith']\n",
+    "\n",
+    "EXPORT_PATH    = \"../data/processed/2_cleaned_data.pkl\""
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
